theme(fix): youtube videos are cut off at the bottom
due to aspect ratio incompatibility

fixes #992

--- a/assets/scss/01-settings/_theme.scss
+++ b/assets/scss/01-settings/_theme.scss
@@ -85,6 +85,7 @@ $enable-important-utilities: false;
 
 /// theme settings
 $heading-height: 70px;
+$aspect-ratio: 2 / 1;
 
 /// mark tag
 $mark-color: var(--bs-gray-dark);
